<resources>
    <string name="app_name">I-Permit Residential</string>
    <string name="Welcome">Welcome</string>
    <string name="LanguageApiKey">AIzaSyA6czlmz3NjmKUGBJmDRyFuduf1D_aYYLg</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="Next">Next</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="EmailOrMail">Email/Mobile</string>
    <string name="Password">Password</string>
    <string name="UserName">Resident Name</string>
    <string name="EmailID">Email ID</string>
    <string name="SecurityVendorName">Security Vendor Name</string>
    <string name="FlatNo">Flat Number</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Verify">Verify</string>
    <string name="EnterOTP">Enter OTP</string>
    <string name="EmployeeDetails">EMPLOYEE DETAILS</string>
    <string name="WhomToMeet">Whom To Meet</string>
    <string name="ReasonForVisit">Reason For Visit ?</string>
    <string name="NameOfTheBuilding">Name Of The Building</string>
    <string name="DeparmentName">Department Name</string>
    <string name="VisitorDetails">Visitor Details</string>
    <string name="VisitorName">Visitor Name</string>
    <string name="IdProofType">ID Proof Type</string>
    <string name="IdProofNumber">ID Proof Number</string>
    <string name="BodyTemperature">Body Temperature</string>
    <string name="Covid19History">Covid-19 History</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Mask">Mask</string>
    <string name="On">Yes</string>
    <string name="Off">No</string>
    <string name="Submit">Submit</string>
    <string name="Designation">Designation</string>
    <string name="EmpID">Employee ID</string>
    <string name="Save">Save</string>
    <string name="SecuritySignUp">Security Sign Up</string>
    <string name="Location">Location</string>
    <string name="LocationOrVendor">Location or Vendor</string>
    <string name="VisitorSignUp">Visitor Sign Up</string>
    <string name="PleaseEnterUserName">Please Enter User Name</string>
    <string name="PleaseEnterEmailID">Please Enter Email ID</string>
    <string name="PleaseEnterEmpCode">Please Enter Employee Code</string>
    <string name="PleaseEnterOTP">Please Enter OTP</string>
    <string name="PleaseEnterValidOTP">Please Enter Valid OTP</string>
    <string name="PleaseEnterSecurityName">Please Enter Security Name</string>
    <string name="PleaseEnterValidNo">Please Enter a Valid Mobile Number</string>
    <string name="PleaseEnterPassword">Please Enter Password</string>
    <string name="PasswordStrength">Password must contain minimum 8 characters,one uppercase letter,one lowercase letter,one number, one special character</string>
    <string name="PasswordStrength6">Password must contain minimum 6 characters</string>
    <string name="err_password_do_not_match">Password Do not Match</string>
    <string name="PleaseEnterValidNoOrEmail">Please Enter a valid Email or Mobile Number</string>
    <string name="Name">Name</string>
    <string name="From">From</string>
    <string name="inTime">In-time</string>
    <string name="ExpectingPermit">Expecting Permit</string>
    <string name="CAB">Cab</string>
    <string name="DELIVERY">Delivery</string>
    <string name="GUEST">Guest</string>
    <string name="PermitExit">Permit Exit</string>
    <string name="KID">KID</string>
    <string name="PermitType">Permit Type</string>

    <string name="SelectImageFrom">Select Image From</string>
    <string name="PleaseEnterWhomToMeet">Please Enter Whom To Meet</string>
    <string name="PleaseEnterReason">Please Enter Reason</string>
    <string name="PleaseEnterFlatNo">Please Enter Flat Number</string>
    <string name="PleaseEnterBlockNo">Please Enter Block Number or Block Name</string>
    <string name="PleaseEnterVisitorName">Please Enter Visitor Name</string>
    <string name="PleaseEnterIDType">Please Enter IDType</string>
    <string name="PleaseEnterIDNumber">Please Enter ID Proof Number</string>
    <string name="PleaseEnterLocation">Please Enter Location</string>
    <string name="PleaseEnterBodyTemp">Please Enter Body Temperature</string>
    <string name="English">English</string>
    <string name="Telugu">Telugu</string>
    <string name="Hindi">Hindi</string>
    <string name="Kannada">Kannada</string>
    <string name="Tamil">Tamil</string>
    <string name="Urdu">Urdu</string>
    <string name="title_activity_security_nav">SecurityNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Profile">Profile</string>
    <string name="Community">Community</string>
    <string name="Household">Household</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="Employee">Resident</string>
    <string name="Security">Security</string>
    <string name="Logs">Logs</string>
    <string name="Confirmed">Confirmed</string>
    <string name="RequestSent">Request Sent</string>
    <string name="RequestMsg">Your Pre-approved request has been sent to security and a confirm message will be sent to the visitor and Resident for future use.</string>
    <string name="Visitor">Visitor</string>
    <string name="Once">Once</string>
    <string name="Permit">Permit</string>
    <string name="AllowToEnterDetails">Allow to Enter Details</string>
    <string name="VehicleNo">Vehicle Number</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="get_verify_code">Get Verification Code</string>
    <string name="forgotpasswordipermit">Forgot Password</string>
    <string name="resetpasswordipermit">Reset Password</string>
    <string name="enternewpassword">Enter New Password</string>
    <string name="buttonforsave">Save</string>
    <string name="reenterpassword">Re-Enter New Password</string>
    <string name="enter_mobile_for_forgot">Enter Mobile Number</string>
    <string name="ProfileSettings">Profile Settings</string>
    <string name="ContactUs">Contact Us</string>
    <string name="ClosingApp">Closing App</string>
    <string name="SUreToExit">Are you sure to Exit?</string>
    <string name="Logout">Logout</string>
    <string name="AreYouSure">Are You Sure to Logout?</string>
    <string name="todo">TODO</string>
    <string name="OTP">OTP</string>
    <string name="EnterMobileOrEmail">Enter Mobile Number or Email</string>
    <string name="Success">Success</string>
    <string name="Failure">Failure</string>
    <string name="FromTime">From Time</string>
    <string name="ToTime">To Time</string>
    <string name="Notifications">Notifications</string>
    <string name="AssignToSecurity">Assign To Security</string>
    <string name="CompanyName">Company Name</string>
    <string name="CommunityName">Community or Building Name</string>
    <string name="EmpName">Resident Name</string>
    <string name="Requests">Requests</string>
    <string name="Activity">Activity</string>
    <string name="Approved">Approved</string>
    <string name="Denied">Denied</string>
    <string name="PreApproved">Pre-Approved</string>
    <string name="Visitors">Visitors</string>
    <string name="EnterCompanyCode">Enter Code</string>
    <string name="OutTime">OutTime</string>
    <string name="Duration">Duration</string>
    <string name="PleaseEnterMobileNumber">Please Enter Mobile Number</string>
    <string name="VerificationCode">Verification Code</string>
    <string name="verifyotptext">Please enter the verification code sent to your Mobile number or Email</string>
    <string name="resend">Resend OTP</string>
    <string name="VerifyOTP">Verify OTP</string>
    <string name="Cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="Exit">Exit</string>
    <string name="VisitorMobileNumber">Visitor Mobile Number</string>
    <string name="ComingFrom">Coming From</string>
    <string name="GatePass">Gate Pass</string>
    <string name="search_mobile_no">Search Mobile Number</string>
    <string name="PoweredBy">Powered By: Unique Datacom Pvt Ltd. \n \n Version-1.0</string>
    <string name="Update">Update</string>
    <string name="UpdateMsg">Please update to the newer version to get new updates</string>
    <string name="Queue">Queue</string>
    <string name="BlockNo">Block Number or Block Name</string>
    <string name="ResidentName">Resident Name</string>
</resources>
